changes done in homepage and added some styles

--- a/index.html
+++ b/index.html
@@ -12,21 +12,29 @@
     />
   </head>
   <body>
+    <section class="navbar">
+      <nav>
+        <h1>Portfolio.</h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </section>
     <section id="home">
       <div class="container">
-        <nav>
-          <img src="" alt="" class="logo" />
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
         <div class="home-content">
-          <p>FullStack Developer</p>
+          <h2>FullStack Developer</h2>
           <h1>Hi, I'm <span>Harshit Gupta</span> From India</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+            eaque dignissimos nesciunt optio consectetur error, impedit facilis
+            magnam modi iste amet quisquam consequatur aspernatur dolore
+            necessitatibus aut, ex placeat laboriosam.
+          </p>
 
           <div class="social-media">
             <a href="#github"><i class="bx bxl-github"></i></a>
