completed about section

--- a/index.html
+++ b/index.html
@@ -75,14 +75,97 @@
               <p class="tab-links">Experience</p>
               <p class="tab-links">Education</p>
             </div>
-            <div class="tab-contents">
+            <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li></li>
+                <li>
+                  <h3>Frontend</h3>
+                  <span class="skills">
+                    <ul>
+                      <li>
+                        <h4>Html</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                      <li>
+                        <h4>Css</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                      <li>
+                        <h4>javascript</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                      <li>
+                        <h4>React</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                    </ul>
+                  </span>
+                </li>
+                <li>
+                  <h3>Backend</h3>
+                  <span class="skills">
+                    <ul>
+                      <li>
+                        <h4>NodeJs</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                      <li>
+                        <h4>ExpressJS</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                      <li>
+                        <h4>Database</h4>
+                        <span class="bar">
+                          <span></span>
+                        </span>
+                      </li>
+                    </ul>
+                  </span>
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="experience">
+              <ul>
+                <li>
+                  <h3>2023-Current</h3>
+                  <!-- <br /> -->
+                  Trainee Engineer at Simform Solutions Pvt Ltd. in Mean Stack
+                  Department
+                </li>
+                <li>
+                  <h3>2022-2023</h3>
+                  Intern at Urbaanac Pvt Ltd. as a FullStack Developer
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="education">
+              <ul>
+                <li>
+                  <h3>2023</h3>
+                  Completed B.tech in Computer Science from Silver Oak
+                  University
+                </li>
+                <li>
+                  <h3>2019</h3>
+                  Completed Higher Secondary School with Science
+                </li>
               </ul>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
