completed service section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <section class="navbar">
@@ -17,7 +24,7 @@
         <h1>Portfolio.</h1>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="#services">Services</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#">Contact</a></li>
@@ -162,6 +169,48 @@
                 </li>
               </ul>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="services">
+      <div class="container">
+        <h1 class="service-title">My Services</h1>
+        <div class="service-list">
+          <div>
+            <i class="fa-solid fa-code"></i>
+            <h2>Web Development</h2>
+            <p>
+              I have experience designing and developing web applications using
+              JavaScript frameworks like Node.js, React.js, and Angular.js. I
+              can build custom web applications from scratch or work with
+              existing codebases to create responsive, high-performance
+              applications.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <!-- <i class="fa-light fa-gear-complex-code"></i> -->
+            <i class="fa-solid fa-gears"></i>
+            <h2>API development</h2>
+            <p>
+              I am proficient in developing and maintaining APIs for web
+              applications. I can implement RESTful APIs using Node.js,
+              Express.js, and other technologies to enable seamless
+              communication between front-end and back-end components.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <h2>Maintenance and support</h2>
+            <p>
+              I can provide ongoing maintenance and support for web
+              applications, including fixing bugs, adding new features, and
+              addressing security concerns. I can work closely with clients to
+              ensure their applications are running smoothly and efficiently.
+            </p>
+            <a href="#">Learn more</a>
           </div>
         </div>
       </div>
