feat: :sparkles: completed service section of portfolio

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       </div>
     </section>
     <section id="about">
+      <div class="about-title">About me</div>
       <div class="container">
         <div class="row">
           <div class="col-1">
             <img src="/assets/images/zyro-image.png" alt="" />
           </div>
           <div class="col-2">
-            <h1>About me</h1>
             <p>
               Hi there! My name is Harshit Gupta, and I'm a full stack
               developer. I've always been passionate about coding and have spent
@@ -174,8 +174,9 @@
       </div>
     </section>
     <section id="services">
+      <div class="service-title">My Services</div>
       <div class="container">
-        <h1 class="service-title">My Services</h1>
+        <!-- <h1 class="service-title">My Services</h1> -->
         <div class="service-list">
           <div>
             <i class="fa-solid fa-code"></i>
@@ -213,6 +214,12 @@
             <a href="#">Learn more</a>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="portfolio">
+      <div class="portfolio-title">My Work</div>
+      <div class="container">
+        <div class="work-list"></div>
       </div>
     </section>
     <script src="/assets/js/index.js"></script>
