working perfectly fine

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </section>
@@ -55,11 +55,8 @@
     <section id="about">
       <div class="about-title">About me</div>
       <div class="container">
-        <div class="row">
-          <div class="col-1">
-            <img src="/assets/images/zyro-image.png" alt="" />
-          </div>
-          <div class="col-2">
+        <div class="about-grid">
+          <div class="about-content">
             <p>
               Hi there! My name is Harshit Gupta, and I'm a full stack
               developer. I've always been passionate about coding and have spent
@@ -76,7 +73,8 @@
               contact me if you have any questions or would like to discuss
               potential collaborations!
             </p>
-
+          </div>
+          <div class="about-tab">
             <div class="tab-titles">
               <p class="tab-links active-link">Skills</p>
               <p class="tab-links">Experience</p>
@@ -146,7 +144,6 @@
               <ul>
                 <li>
                   <h3>2023-Current</h3>
-                  <!-- <br /> -->
                   Trainee Engineer at Simform Solutions Pvt Ltd. in Mean Stack
                   Department
                 </li>
@@ -176,7 +173,6 @@
     <section id="services">
       <div class="service-title">My Services</div>
       <div class="container">
-        <!-- <h1 class="service-title">My Services</h1> -->
         <div class="service-list">
           <div>
             <i class="fa-solid fa-code"></i>
@@ -191,7 +187,6 @@
             <a href="#">Learn more</a>
           </div>
           <div>
-            <!-- <i class="fa-light fa-gear-complex-code"></i> -->
             <i class="fa-solid fa-gears"></i>
             <h2>API development</h2>
             <p>
@@ -216,12 +211,163 @@
         </div>
       </div>
     </section>
-    <section class="portfolio">
+    <!-- <section class="portfolio">
       <div class="portfolio-title">My Work</div>
       <div class="container">
         <div class="work-list"></div>
       </div>
+    </section> -->
+    <section id="testimonials">
+      <div class="container">
+        <div class="slide-container">
+          <div class="card-wrapper">
+            <div class="card">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="card-image">
+                  <img
+                    src="/assets/images/profile1.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+              <div class="card-content">
+                <h2 class="name">Alex Willam</h2>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  sequi repudiandae quam harum esse beatae libero ex molestiae
+                  blanditiis accusantium.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="card-image">
+                  <img
+                    src="/assets/images/profile2.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+              <div class="card-content">
+                <h2 class="name">David Markova</h2>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  sequi repudiandae quam harum esse beatae libero ex molestiae
+                  blanditiis accusantium.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="card-image">
+                  <img
+                    src="/assets/images/profile3.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+              <div class="card-content">
+                <h2 class="name">Alex Willam</h2>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  sequi repudiandae quam harum esse beatae libero ex molestiae
+                  blanditiis accusantium.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="card-image">
+                  <img
+                    src="/assets/images/profile4.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+              <div class="card-content">
+                <h2 class="name">Alex Willam</h2>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  sequi repudiandae quam harum esse beatae libero ex molestiae
+                  blanditiis accusantium.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="image-content">
+                <span class="overlay"></span>
+                <div class="card-image">
+                  <img
+                    src="/assets/images/profile5.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+              <div class="card-content">
+                <h2 class="name">Alex Willam</h2>
+                <p class="description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  sequi repudiandae quam harum esse beatae libero ex molestiae
+                  blanditiis accusantium.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <section id="contact">
+      <div class="container">
+        <div class="contact-grid">
+          <div class="contact-left">
+            <div class="sub-title">Contact <span>me</span></div>
+            <p>
+              <i class="fa-solid fa-paper-plane"></i>harshgupta9660@gmail.com
+            </p>
+            <p><i class="fa-solid fa-phone"></i>9157826711</p>
+            <div class="social-media">
+              <a href="#github"><i class="bx bxl-github"></i></a>
+              <a href="#linkdin"><i class="bx bxl-linkedin"></i></a>
+              <a href="#instagram"><i class="bx bxl-instagram"></i></a>
+            </div>
+          </div>
+          <div class="contact-right">
+            <form>
+              <input
+                type="text"
+                name="Name"
+                placeholder="Please Type Your Name"
+                required
+              />
+              <input
+                type="email"
+                name="Email"
+                placeholder="Please Type Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                cols="5"
+                placeholder="Please Type Your Message Here!"
+              ></textarea>
+              <button type="submit" class="submit-btn">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
