feat: Completed custom slider feature

--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
       <div class="container">
         <div class="slide-container">
           <div class="card-wrapper">
-            <div class="card">
+            <div class="prev">&#60;</div>
+            <div class="card active-card">
               <div class="image-content">
                 <span class="overlay"></span>
                 <div class="card-image">
@@ -233,7 +234,7 @@
                 </div>
               </div>
               <div class="card-content">
-                <h2 class="name">Alex Willam</h2>
+                <h2 class="name">Ava Martinez</h2>
                 <p class="description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
                   sequi repudiandae quam harum esse beatae libero ex molestiae
@@ -253,7 +254,7 @@
                 </div>
               </div>
               <div class="card-content">
-                <h2 class="name">David Markova</h2>
+                <h2 class="name">Luna Singh</h2>
                 <p class="description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
                   sequi repudiandae quam harum esse beatae libero ex molestiae
@@ -293,7 +294,7 @@
                 </div>
               </div>
               <div class="card-content">
-                <h2 class="name">Alex Willam</h2>
+                <h2 class="name">Isabella Rodriguez</h2>
                 <p class="description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
                   sequi repudiandae quam harum esse beatae libero ex molestiae
@@ -313,7 +314,7 @@
                 </div>
               </div>
               <div class="card-content">
-                <h2 class="name">Alex Willam</h2>
+                <h2 class="name">Charlotte Nguyen</h2>
                 <p class="description">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
                   sequi repudiandae quam harum esse beatae libero ex molestiae
@@ -321,6 +322,7 @@
                 </p>
               </div>
             </div>
+            <div class="next">&#62;</div>
           </div>
         </div>
       </div>
