slider js completed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css" />
   </head>
   <body>
     <section class="navbar">
@@ -218,12 +219,13 @@
       </div>
     </section> -->
     <section id="testimonials">
-      <div class="container">
-        <div class="slide-container">
-          <div class="card-wrapper">
-            <div class="card active-card">
+      <div class="slide-container swiper">
+        <div class="slide-content">
+          <div class="card-wrapper swiper-wrapper">
+            <div class="card swiper-slide">
               <div class="image-content">
                 <span class="overlay"></span>
+
                 <div class="card-image">
                   <img
                     src="/assets/images/profile1.jpg"
@@ -232,18 +234,20 @@
                   />
                 </div>
               </div>
+
               <div class="card-content">
-                <h2 class="name">Ava Martinez</h2>
+                <h2 class="name">David Dell</h2>
                 <p class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  sequi repudiandae quam harum esse beatae libero ex molestiae
-                  blanditiis accusantium.
+                  The lorem text the section that contains header with having
+                  open functionality. Lorem dolor sit amet consectetur
+                  adipisicing elit.
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card swiper-slide">
               <div class="image-content">
                 <span class="overlay"></span>
+
                 <div class="card-image">
                   <img
                     src="/assets/images/profile2.jpg"
@@ -252,18 +256,20 @@
                   />
                 </div>
               </div>
+
               <div class="card-content">
-                <h2 class="name">Luna Singh</h2>
+                <h2 class="name">David Dell</h2>
                 <p class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  sequi repudiandae quam harum esse beatae libero ex molestiae
-                  blanditiis accusantium.
+                  The lorem text the section that contains header with having
+                  open functionality. Lorem dolor sit amet consectetur
+                  adipisicing elit.
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card swiper-slide">
               <div class="image-content">
                 <span class="overlay"></span>
+
                 <div class="card-image">
                   <img
                     src="/assets/images/profile3.jpg"
@@ -272,18 +278,20 @@
                   />
                 </div>
               </div>
+
               <div class="card-content">
-                <h2 class="name">Alex Willam</h2>
+                <h2 class="name">David Dell</h2>
                 <p class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  sequi repudiandae quam harum esse beatae libero ex molestiae
-                  blanditiis accusantium.
+                  The lorem text the section that contains header with having
+                  open functionality. Lorem dolor sit amet consectetur
+                  adipisicing elit.
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card swiper-slide">
               <div class="image-content">
                 <span class="overlay"></span>
+
                 <div class="card-image">
                   <img
                     src="/assets/images/profile4.jpg"
@@ -292,18 +300,20 @@
                   />
                 </div>
               </div>
+
               <div class="card-content">
-                <h2 class="name">Isabella Rodriguez</h2>
+                <h2 class="name">David Dell</h2>
                 <p class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  sequi repudiandae quam harum esse beatae libero ex molestiae
-                  blanditiis accusantium.
+                  The lorem text the section that contains header with having
+                  open functionality. Lorem dolor sit amet consectetur
+                  adipisicing elit.
                 </p>
               </div>
             </div>
-            <div class="card">
+            <div class="card swiper-slide">
               <div class="image-content">
                 <span class="overlay"></span>
+
                 <div class="card-image">
                   <img
                     src="/assets/images/profile5.jpg"
@@ -312,17 +322,44 @@
                   />
                 </div>
               </div>
+
               <div class="card-content">
-                <h2 class="name">Charlotte Nguyen</h2>
+                <h2 class="name">David Dell</h2>
                 <p class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  sequi repudiandae quam harum esse beatae libero ex molestiae
-                  blanditiis accusantium.
+                  The lorem text the section that contains header with having
+                  open functionality. Lorem dolor sit amet consectetur
+                  adipisicing elit.
+                </p>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <div class="image-content">
+                <span class="overlay"></span>
+
+                <div class="card-image">
+                  <img
+                    src="/assets/images/profile6.jpg"
+                    alt=""
+                    class="card-img"
+                  />
+                </div>
+              </div>
+
+              <div class="card-content">
+                <h2 class="name">David Dell</h2>
+                <p class="description">
+                  The lorem text the section that contains header with having
+                  open functionality. Lorem dolor sit amet consectetur
+                  adipisicing elit.
                 </p>
               </div>
             </div>
           </div>
         </div>
+
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
       </div>
     </section>
 
@@ -367,7 +404,7 @@
         </div>
       </div>
     </section>
-
+    <script src="/assets/js/swiper-bundle.min.js"></script>
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
